Fix market tags scrollbars (#2964)
* Remove unused component

* Wrap market view tags on mobile

Previously we used scrollbars.
Augur-1722 Mobile - trading pg scrollbar issue

--- a/src/modules/market/components/market-header/market-header.styles.less
+++ b/src/modules/market/components/market-header/market-header.styles.less
@@ -216,6 +216,7 @@
   > div:first-of-type {
     display: flex;
     flex: 1;
+    flex-wrap: wrap;
     margin-right: @size-20;
     max-width: 654px;
     padding-top: 0.125rem;
